Refactor BrickColor to use EnumMap and remove Magic Numbers
- Introduce BrickType Enum to centralize Brick IDs
- Replace switch statement in BrickColor with EnumMap lookup
- Update Bricks (I,J,Z,...) to use BrickType.getID() instead of raw integers